--- a/webapp/index.html
+++ b/webapp/index.html
@@ -5,11 +5,11 @@
 		<meta charset="utf-8">
 		<title>SLiPP Java Web Programming</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-		<link href="http://localhost:8080/css/bootstrap.min.css" rel="stylesheet">
+		<link href="http://18.188.185.106:8080/css/bootstrap.min.css" rel="stylesheet">
 		<!--[if lt IE 9]>
 			<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
-		<link href="http://localhost:8080/css/styles.css" rel="stylesheet">
+		<link href="http://18.188.185.106:8080/css/styles.css" rel="stylesheet">
 	</head>
 	
 	<body>
